# Stack

./: .travis.yml  CMakeLists.txt  README.md
examples/: main.cpp
include/: allocator.hpp  stack.h  stack.hpp
sources/: stack.cpp
tests/: empty.cpp  length.cpp  main.cpp  pop.cpp  push_back.cpp  top.cpp
